@@ -1,4 +1,4 @@
-.TH HDPARM 8 "April 2005" "Version 6.0"
+.TH HDPARM 8 "April 2005" "Version 6.1"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
