@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	6.0
-Entered-date:	2005-04-10
+Version:	6.1
+Entered-date:	2005-04-16
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v6.1 bug fix for BLKGETSIZE
 		v6.0 bug fix for BLKGETSIZE64; new ATA Security Commands
 		v5.9 bug fix: -W1/-W0 now work again
 		v5.8 minor fixes
@@ -45,7 +46,7 @@ Keywords:	ide eide ata atapi performance kernel cd cdrom disk device driver
 Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		40K hdparm-6.0.tar.gz
+		40K hdparm-6.1.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
